tdf#149747 DOCX import: use UI style name for tracked changes

instead of the programmatic style name, because rejection
of tracked paragraph style changes was incorrect
with an other UI than English UI.

Change-Id: I3b3b163b2538732b2470162888083de0609895fc